--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 2.0.1+6
+version: 2.0.2+7
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -24,6 +24,10 @@ dependencies:
   flutter:
     sdk: flutter
 
+  # translate
+  flutter_localizations:
+    sdk: flutter
+  intl: ^0.16.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -38,6 +42,8 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
+  # translate
+  generate: true
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
